--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
     <script>
         function checkPassword() {
-            const password = document.getElementById('password').value;
+            const password = document.getElementById('password').value.trim();
             if (password === 'PrevailHandbook2024') {
                 document.getElementById('content').style.display = 'block';
                 document.getElementById('login').style.display = 'none';
@@ -32,4 +32,3 @@
     </div>
 </body>
 </html>
-
