--- a/index.html
+++ b/index.html
@@ -5,9 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Protected Document</title>
     <style>
-        body { margin: 0; padding: 0; }
-        #content { display: none; width: 100vw; height: 100vh; }
-        #login { display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column; }
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Helvetica', Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        #login {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+        #login img {
+            width: 200px;
+            margin-bottom: 20px;
+        }
+        #login h2 {
+            margin-bottom: 20px;
+        }
+        #login input {
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            width: 200px;
+        }
+        #login button {
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #login button:hover {
+            background-color: #0056b3;
+        }
+        #content {
+            display: none;
+            width: 100vw;
+            height: 100vh;
+        }
     </style>
     <script>
         function checkPassword() {
@@ -23,6 +70,7 @@
 </head>
 <body>
     <div id="login">
+        <img src="https://github.com/GeorgeBragg2024/Team_Handbook/blob/main/PF_logo.png" alt="Prevail Logo">
         <h2>Please enter the password to access the document</h2>
         <input type="password" id="password" placeholder="Password">
         <button onclick="checkPassword()">Submit</button>
