--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <div id="login">
-        <img src="https://github.com/GeorgeBragg2024/Team_Handbook/blob/main/PF_logo.png" alt="Prevail Logo">
+        <img src="https://raw.githubusercontent.com/GeorgeBragg2024/Team_Handbook/main/PF_logo.png" alt="Prevail Logo">
         <h2>Please enter the password to access the document</h2>
         <input type="password" id="password" placeholder="Password">
         <button onclick="checkPassword()">Submit</button>
