--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         }
         #login h2 {
             margin-bottom: 20px;
+            font-weight: lighter;
         }
         #login input {
             padding: 10px;
@@ -71,7 +72,7 @@
 <body>
     <div id="login">
         <img src="https://raw.githubusercontent.com/GeorgeBragg2024/Team_Handbook/main/PF_logo.png" alt="Prevail Logo">
-        <h2>Please enter the password to access the document</h2>
+        <h2>Please enter the password 🙂</h2>
         <input type="password" id="password" placeholder="Password">
         <button onclick="checkPassword()">Submit</button>
     </div>
@@ -80,3 +81,4 @@
     </div>
 </body>
 </html>
+
