--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
     <div id="login">
         <img src="https://raw.githubusercontent.com/GeorgeBragg2024/Team_Handbook/main/PF_logo.png" alt="Prevail Logo">
-        <h2>Please enter the password 🙂</h2>
+        <h2>Please enter the password 👍 </h2>
         <input type="password" id="password" placeholder="Password">
         <button onclick="checkPassword()">Submit</button>
     </div>
